# cs-bridge-2020-hw8

./: .hwconfig.json  CMakeLists.txt
q1/: main.cpp  make_test_cases.py  question.md  test-cases.json
q2/: main.cpp  question.md  test-cases.json
q3/: main.cpp  question.md
q3/test-cases/: given-expected.txt
q4/: main.cpp  question.md
q4/test-cases/: correct1-env.txt  correct1-expected.txt  incorrect1-expected.txt  toolong-expected.txt  tooshort-expected.txt
q5/: CMakeLists.txt  main.cpp  question.md  test-cases.json
q6/: CMakeLists.txt  main.cpp  question.md  test-cases.json
